[package]
name = "rwkvk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
anyhow = "1.0"
bytemuck = "1"
clap = { version = "4.1.4", features = ["derive"] }
half = { version = "2", features = ["bytemuck", "use-intrinsics"] }
memmap2 = "0"
safetensors = "0.2.8"
tokenizers = { version = "0.13", default-features = false, features = ["esaxx_fast", "fancy-regex", "onig"] }
