[package]
name = "rwkvk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
half = { version = "2", features = ["bytemuck", "use-intrinsics"] }
memmap2 = "0"
safetensors = "0.2.8"
clap = { version = "4.1.4", features = ["derive"], optional = true }
tokenizers = { version = "0.13", default-features = false, features = ["esaxx_fast", "fancy-regex", "onig"], optional = true }

[features]
build-binary = ["clap", "tokenizers"]

[[bin]]         
name = "rwkvk-rs"
path = "src/main.rs"
required-features = ["build-binary"]